[tool.poetry]
name = "jerry-s-game"
version = "0.1.0"
description = "Poetry environment"
authors = ["Волков Сергей <_wolfy_@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
